--- a/src/package.json
+++ b/src/package.json
@@ -12,8 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/express-handlebars": "^3.1.0",
     "@types/node": "^14.14.28",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   }
